<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/alert_dialog_black_background">

    <TextView android:id="@+id/txtGuestUserTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pass_text"
        android:textSize="@dimen/custom_text_size"
        android:textColor="@color/white"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/dialogPassEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:textColorHint="@color/darkGrey"
        android:hint="@string/hint_password_lower_case"
        android:textColor="@color/white"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_edit_text_background">
        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/dialogConfirmEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:inputType="textPassword"
        android:textColorHint="@color/darkGrey"
        android:layout_marginRight="15dp"
        android:hint="@string/hint_confirm_password"
        android:textColor="@color/white"
        android:paddingLeft="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edit_text_background"/>

    <LinearLayout android:id="@+id/changePasswordControllerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <Button android:id="@+id/alertChangePassCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_selector_blue"
            android:text="@string/alert_dialog_button_cancel"/>

        <Button android:id="@+id/alertChangePassOkBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_selector_blue"
            android:text="@string/alert_dialog_button_ok"/>
    </LinearLayout>

</LinearLayout>