<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp" >

    <TextView
        android:id="@+id/alertCancelReasonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/res_details_cancel"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/alertCancelMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/res_details_cancel_alert_msg"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextDialogCancelInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_black_background"
        android:hint="@string/res_hint_reason">

        <requestFocus />

    </EditText>

</LinearLayout>