<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/updateButtonLinearLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/arriveTimeStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/model_time_left"
            android:textColor="@color/white" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.models2you.model.ui.activity.CurrentLocationMapActivity" />

        <FrameLayout
            android:id="@+id/progressBarFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@color/black">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_direction_msg"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"/>
        </FrameLayout>
    </FrameLayout>

    <Button
        android:id="@+id/showDetailBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/black_background_button_selector"
        android:text="@string/curr_location_show_detail"
        android:textColor="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:id="@+id/arrivedContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:weightSum="2">

            <Button
                android:id="@+id/arrivedBtn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/black_background_button_selector"
                android:text="@string/curr_location_arrived"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/delayBtn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/black_background_button_selector"
                android:text="@string/curr_location_delay"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/black_background_button_selector"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/curr_location_continue"
            android:textColor="@color/white"
            android:visibility="gone" />
    </FrameLayout>


</LinearLayout>

