<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/signInParentLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/email"
            android:text="@string/email"
            android:textColor="@color/lightGrey"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/email"
            android:inputType="textNoSuggestions"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_edit_text_background"/>

        <TextView
            android:id="@+id/password"
            android:layout_marginTop="8dp"
            android:text="@string/password"
            android:textColor="@color/lightGrey"
            android:textSize="16dp"
            android:layout_below="@+id/emailEdit"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/password"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:background="@drawable/rounded_edit_text_background"/>

        <RelativeLayout
            android:id="@+id/passSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordEdit">

            <Button
                android:id="@+id/btnForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@color/colorTransparent"
                android:textSize="16dp"
                android:textColor="@color/lightGrey"
                android:paddingLeft="15dp"
                android:text="@string/forgot_password"/>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:textSize="16dp"
                android:textColor="@color/lightGrey"
                android:layout_alignParentRight="true"
                android:text="@string/sign_up"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/passSign"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:background="@drawable/button_selector_blue"/>

    </RelativeLayout>

</LinearLayout>
