<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/headerMenuLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:clickable="true"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/updateProfile"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:text="@string/update_profile"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:onClick="onOptionsMenuUpdateProfileClicked"
            android:drawableLeft="@drawable/refresh_image_icon"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:textColor="@color/darkGrey" />

        <View
            android:id="@+id/div2"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appcolorSeperatorBackground"/>

        <TextView
            android:id="@+id/viewBasket"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onOptionsMenuManagePhotoClicked"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/manage_photo"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/basket_image_icon"
            android:textColor="@color/darkGrey" />

        <View
            android:id="@+id/div3"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appcolorSeperatorBackground"/>

        <TextView
            android:id="@+id/pendingReservation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="onOptionsMenuPendingReservationClicked"
            android:text="@string/pending_reservation"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/basket_image_icon"
            android:textColor="@color/darkGrey" />

        <View
            android:id="@+id/div4"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appcolorSeperatorBackground"/>

        <TextView
            android:id="@+id/currentReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:onClick="onOptionsMenuCurrentReservationClicked"
            android:text="@string/current_reservation"
            android:textColor="@color/darkGrey"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/current_reservation_icon"/>

        <View
            android:id="@+id/div5"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appcolorSeperatorBackground"/>

        <TextView
            android:id="@+id/pastReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:onClick="onOptionsMenuPastReservationClicked"
            android:text="@string/past_reservation"
            android:textColor="@color/darkGrey"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/current_reservation_icon"/>


        <View
            android:id="@+id/div6"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appcolorSeperatorBackground"/>

        <TextView
            android:id="@+id/cancelReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOptionsMenuCancelledReservationClicked"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/cancel_reservation"
            android:textColor="@color/darkGrey"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/cancel_image_icon"/>

        <View
            android:id="@+id/div7"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appcolorSeperatorBackground"/>

        <TextView
            android:id="@+id/completedReservation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:onClick="onOptionsMenuCompletedReservationClicked"
            android:text="@string/completed_reservation"
            android:textColor="@color/darkGrey"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:drawableLeft="@drawable/previous_reservation_icon"/>

        <View
            android:id="@+id/div8"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/appcolorSeperatorBackground"/>

        <TextView
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="center_vertical"
            android:onClick="onOptionsMenuLogoutClicked"
            android:text="@string/log_out"
            android:drawableLeft="@drawable/logout_icon"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:textColor="@color/darkGrey" />
    </LinearLayout>
</FrameLayout>
